[project]
name = "langgraph-voice-agent"
version = "0.1.0"
description = "Voice-enabled LangGraph travel planning agent with LiveKit integration"
requires-python = ">=3.9,<3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "livekit>=0.12.0",
    "livekit-agents>=0.8.0",
    "livekit-plugins-deepgram>=0.5.0",
    "livekit-plugins-google>=0.5.0",
    "livekit-plugins-cartesia>=0.1.0",
    "python-dotenv>=1.0.0",
    "livekit-plugins-noise-cancellation>=0.2.5",
    "av==12.3.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]